[package]
name = "riscv-rust-hello-world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv = "0.8.0"
volatile-register = "0.2.1"
old-hal = { package = "embedded-hal", version = "0.2.7" }
embedded-hal = "1.0.0-alpha.8"

[build-dependencies]
cc = "1.0"

[lib]
name = "rust"
crate-type = ["staticlib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
